# OpenPlanter

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  README.md  cast_to_video.py  docker-compose.yml  meta-process.yaml  mypy.ini  pyproject.toml  ruff.toml
.claude/: settings.json
acceptance_gates/: EXAMPLE.yaml
agent/: __main__.py  builder.py  builtin_tool_plugins.py  config.py  credentials.py  demo.py  engine.py  tui.py  (+9 more)
backend/: Dockerfile  pyproject.toml
backend/redthread/: __init__.py  config.py  main.py  security.py
backend/redthread/agent/: __init__.py  client.py  prompts.py  sdk_adapter.py
backend/redthread/agent/tools/: __init__.py  entity.py  evidence.py  ingest.py  ofac.py  sar.py  search.py  timeline.py
backend/redthread/api/: __init__.py  routes.py  websocket.py
backend/redthread/db/: __init__.py  graph.py  models.py  repositories.py  sqlite.py
backend/redthread/entity/: __init__.py  batch.py  pairwise.py
backend/redthread/ingestion/: __init__.py  parsers.py
backend/redthread/ofac/: __init__.py  downloader.py  screener.py
backend/redthread/search/: __init__.py  exa.py
backend/tests/: test_agent_client.py  test_api_routes.py  test_batch_entity.py  test_config.py  test_graph.py  test_main.py  test_ofac_downloader.py  test_ofac_screener.py  test_pairwise.py  test_parsers.py  test_repositories.py  test_sdk_adapter.py  test_search.py  test_security.py  test_sqlite.py  test_tool_entity.py  test_tool_evidence.py  test_tool_ingest.py  test_tool_sar.py  test_tool_timeline.py  test_websocket.py
(+203 files in other folders)
